k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: the-matrix
  labels:
    app.kubernetes.io/name: the-matrix
    app.kubernetes.io/part-of: the-matrix-platform
